# OpenCLAndroid

./: CMakeLists.txt  debug.h  main.cpp
Common/include/: config.h
OpenCL/include/linux/: msm_ion.h
Util/include/: Timer.h
Util/src/: Timer.cpp
oclutil/: CMakeLists.txt  cl_wrapper.cpp  cl_wrapper.h  util.cpp
opencv/: readme.txt
opencv/opencv3_4/include/opencv2/: opencv.hpp
opencv/opencv3_4/include/opencv2/core/: cv_cpu_dispatch.h
opencv/opencv3_4_notbb/include/opencv2/: cvconfig.h
opencv/opencv3_4_notbb/include/opencv2/core/: utility.hpp
